# speaking_agent

./: AGENTS.md  pyproject.toml  requirements.txt  run.bat  run.ps1
src/: main.py
